trying to fix contact form on mobile size

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -14,3 +14,7 @@ ul{
         list-style: none;
     }
 }
+
+#logo-container{
+    height: 14vh;
+}
