--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -8,5 +8,5 @@
     margin-left: auto;
     margin-right: auto;
     padding: 22px;
-    position: relative;
+    // position: relative;
 }
