--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -2,34 +2,57 @@
 
 #about-me-container{
     padding: 24px 16px;
+    padding-top: 62px;
     display: grid;
     gap: 16px;
-    grid-template-columns: 30% auto;
+    grid-template-columns: 100%;
     grid-template-rows: auto;
 
-    grid-template-areas: "about-image about-text";
+    grid-template-areas: 
+        "about-image about-image"
+        "about-text about-text";
 
     @include md{
         padding-top: 280px;
+        grid-template-areas: "about-image about-text";
+        grid-template-columns: 30% auto;
+        grid-template-rows: auto;
     }
 
     #about-image{
         grid-area: about-image;
         background-image: url(../img/gallery/selfie.jpg);
-        background-size: contain;
+        background-size: cover;
         background-position: center;
         width: 100%;
         max-height: 100%;
         object-fit: contain;
         border-radius: 50%;
+        height: 40vh;
+        align-items: center;
+
+        @include md{
+            background-size: contain;
+            background-position: center;
+        }
     }
 
     #about-text{
-        padding: 24px
+        padding: 24px;
+        align-items: center;
     }
 }
 
+// #spotify{
+//     padding-left: 24px;
+//     padding-right: 24px;
+// }
 
+#playlist{
+    display: grid;
+    grid-template-columns: 5% auto 5%;
+    grid-template-areas: ". playlist .";
+}
 
 
 #image-gallery{
@@ -37,23 +60,30 @@
     display: grid;
     gap: 16px;
 
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 15vh;
-
-    grid-template-areas: 
-    "p1 p2"
-    "p3 p4"
-    "p5 p6"
-    "p7 g8";
-
-    @include md{
-        grid-template-columns: repeat(4, fr);
-        grid-template-rows: 50vh 50vh;
+    grid-template-columns: repeat(4, fr);
+        grid-template-rows: 20vh 20vh;
 
         grid-template-areas: 
         "p1 p2 p3 p4"
         "p5 p6 p7 p8";
-    }
+
+    // grid-template-columns: repeat(4, 1fr);
+    // grid-template-rows: 15vh;
+
+    // grid-template-areas: 
+    // "p1 p2"
+    // "p3 p4"
+    // "p5 p6"
+    // "p7 g8";
+
+    // @include md{
+    //     grid-template-columns: repeat(4, fr);
+    //     grid-template-rows: 50vh 50vh;
+
+    //     grid-template-areas: 
+    //     "p1 p2 p3 p4"
+    //     "p5 p6 p7 p8";
+    // }
 
 
     li{
@@ -103,21 +133,15 @@
 }
 
 
+// #playlist{
+//     display: grid;
+//     grid-template-columns: auto 40% auto;
+//     align-items: center;
+// }
 
 
-#spotify{
-    padding-left: 24px;
-    padding-right: 24px;
-}
-
-#playlist{
-    display: grid;
-    grid-template-columns: auto 40% auto;
-    align-items: center;
-}
-
-#goodreads{
-    display: flex;
-    padding-left: 24px;
-    padding-right: 24px;
-}
+// #goodreads{
+//     display: flex;
+//     padding-left: 24px;
+//     padding-right: 24px;
+// }
