--- a/scss/sections/_contact.scss
+++ b/scss/sections/_contact.scss
@@ -4,26 +4,33 @@
     padding-right: 24px;
     border-radius: 10px;
     margin: 0 auto;
-    border: none;
+    border: 1 px solid red;
+    align-items: center;
+    text-align: center;
     @include md{
-        padding-top: 260px;
+        padding-top: 340px;
     }
 }
 
 #contact-form{
-    display: flex;
+    display: inline-flex;
     // background-color: var(--forestGreen);
-    gap: 14px;
+    gap: 24px;
     padding: 12px 16px;
+    justify-content: center;
 
     form{
         display: grid;
         gap: 16px;
-    
-        grid-template-rows: auto;
+        // grid-template-rows: 90px 90px 200px 500px;
+        // grid-template-areas: 
+        // "contact-name"
+        // "contact-email"
+        // "contact-message"
+        // "send-button";
 
         @include md{
-            padding: 0 10vw;
+            // padding: 0 10vw;
             grid-template-columns: 50% auto;
             grid-template-rows: 8vh 16vh auto;
             grid-template-areas: 
@@ -42,6 +49,7 @@
                 padding-bottom: 5px;
                 padding-left: 8px;
                 box-sizing: border-box;
+                border: none;
             }
 
             textarea{
@@ -50,6 +58,7 @@
                 height: 100%;
                 width: 100%;
                 box-sizing: border-box;
+                border: none;
             }
 
             ::placeholder{
@@ -63,21 +72,27 @@
         }
 
         #contact-name{
-            border: none;
             width: 100%;
+            grid-area: contact-name;
             @include md{
                 grid-area: contact-name;
             }
         }
 
         #contact-email{
+            border: none;
+            width: 100%;
+            grid-area: contact-email;
             @include md{
                 grid-area: contact-email;
             }
         }
 
         #contact-message{
+            border: none;
+            width: 100%;
             align-items: flex-start;
+            grid-area: contact-message;
             @include md{
                 grid-area: contact-message;
             }
@@ -90,9 +105,14 @@
             border: none;
             border-radius: 6px;
             font-size: rem-calc(4);
+            grid-area: send-button;
             @include md{
                 grid-area: send-button;
             }
         }
     }
+}
+
+#social-media{
+    display: table;
 }
